--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,152 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+header {
+  padding: 2vw 5vw 2vw 5vw;
+}
+
+nav {
+  text-align: left;
+}
+
+button {
+  cursor: pointer;
+  padding: 1vw 2vw 1vw 2vw;
+  margin: 1vw;
+	border: none;
+	background-color: #74b084;
+	font-size: 2.8vh;
+  text-transform: uppercase;
+  transition: 0.5s;
+}
+
+button:hover {
+  background-color: #61876f;
+}
+
+.main-container {
+  margin: 1vw 5vw;
+  width: 80%;
+}
+
+.flag-icon {
+  cursor: pointer;
+  padding: 0.5vw;
+  width: 3vw;
+  height: 4.5vh;
+}
+
+.country-flags {
+  text-align:left;
+}
+
+.card-container {
+  /* margin: 3vw 3vw; */
+  display: flex;
+  overflow-x: scroll;
+}
+
+.product-card {
+  margin: 1.5vw;
+  padding: 0 1.5vw 0 1.5vw;
+  border: 1px solid silver;
+  width: 20vw;
+}
+
+.product-card-img {
+  max-width: 100%;
+}
+
+.checkout-container {
+  text-align: center;
+}
+
+.checkout-card {
+  display: flex;
+  justify-content: space-between;
+  margin: 1.5vw;
+  padding: 0 1.5vw 0 1.5vw;
+  border: 1px solid silver;
+  width: 100%;
+  height: 25vh;
+}
+
+.checkout-card-img {
+  max-width: 100%;
+}
+
+.product-detail-img {
+  width: 20vw;
+}
+
+.product-link {
+  text-decoration: none;
+  color: black;
+}
+
+.product-detail {
+  flex: 2;
+  margin: auto;
+  padding-bottom: 10vw;
+}
+
+.product-container {
+  margin: auto;
+  display: flex;
+  width: 100%;
+}
+
+.product-buy {
+  flex: 1;
+  padding: 0 1.5vw 0 1.5vw;;
+  border: 1px solid silver;
+}
+
+.shopping-cart {
+  float: right;
+}
+
+.checkout-title {
+  width: 20%;
+}
+
+.checkout-payment {
+  margin: auto;
+  display: flex;
+  justify-content: space-between;
+}
+
+.define-qty {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.qty-toggler {
+  margin: 2vw auto 3vw auto;
+  display: flex;
+  width: 9vw;
+  height: 3vw;
+  background-color: silver;
+  border: 1px solid silver;
+}
+
+.qty-toggler button {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  background-color: white;
+  border: 1px solid silver;
+  flex: 1;
+}
+
+.qty-toggler span {
+  display: flex;
+  align-items: center;
+  margin: auto;
+  height: 95%;
+  background-color: lightgray;
+  border: 1px solid silver;
+  flex: 1;
+}
