--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
+:root {
+  --main-green-color: #74b084;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -25,7 +29,7 @@ button {
   padding: 1vw 2vw 1vw 2vw;
   margin: 1vw;
 	border: none;
-	background-color: #74b084;
+	background-color: var(--main-green-color);
 	font-size: 2.8vh;
   text-transform: uppercase;
   transition: 0.5s;
@@ -58,6 +62,7 @@ button:hover {
 }
 
 .product-card {
+  text-transform: uppercase;
   margin: 1.5vw;
   padding: 0 1.5vw 0 1.5vw;
   border: 1px solid silver;
@@ -86,8 +91,9 @@ button:hover {
   max-width: 100%;
 }
 
-.product-detail-img {
-  width: 20vw;
+.product-detail--info--img {
+  margin-bottom: 3vw;
+  width: 100%;
 }
 
 .product-link {
@@ -95,22 +101,37 @@ button:hover {
   color: black;
 }
 
-.product-detail {
-  flex: 2;
-  margin: auto;
+.product-detail--info {
+  flex: 5;
+  margin: 0 auto;
   padding-bottom: 10vw;
+  padding-right: 5vw;
 }
 
-.product-container {
+.product-detail--container {
   margin: auto;
   display: flex;
-  width: 100%;
+  width: 95%;
 }
 
-.product-buy {
-  flex: 1;
-  padding: 0 1.5vw 0 1.5vw;;
+.product-detail--buy {
+  flex: 3;
+  /* padding: 0 1.5vw 0 1.5vw; */
   border: 1px solid silver;
+}
+
+.product-detail--buy p {
+  padding-left: 1.5vw;
+}
+
+.product-detail--buy--price {
+  background-color: #e6ebf2;
+  padding: 0 1.5vw 0 1.5vw;
+  width: auto;
+  left: 0;
+  right: 0;
+  height: 5vw;
+  overflow-x: hidden;
 }
 
 .shopping-cart {
@@ -127,8 +148,9 @@ button:hover {
   justify-content: space-between;
 }
 
-.define-qty {
+.product-detail--define-qty {
   display: flex;
+  padding: 3vw 0 1.5vw 1.5vw;
   justify-content: space-between;
   align-items: center;
 }
@@ -159,4 +181,15 @@ button:hover {
   background-color: lightgray;
   border: 1px solid silver;
   flex: 1;
+}
+
+.custom-title {
+  text-align: center;
+  text-transform: uppercase;
+  margin-bottom: 4vw;
+}
+
+.custom-title hr{
+  color: var(--main-green-color);
+  width: 5%;
 }
