--- a/src/index.css
+++ b/src/index.css
@@ -40,7 +40,7 @@ button:hover {
 }
 
 .main-container {
-  margin: 1vw 5vw;
+  margin: auto;
   width: 80%;
 }
 
@@ -83,7 +83,6 @@ button:hover {
   margin: 1.5vw;
   padding: 0 1.5vw 0 1.5vw;
   border: 1px solid silver;
-  width: 100%;
   height: 25vh;
 }
 
