--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
 :root {
   --main-green-color: #74b084;
+  --header-bg-color: #eaeeeb;
 }
 
 body {
@@ -17,11 +18,30 @@ code {
 }
 
 header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
   padding: 2vw 5vw 2vw 5vw;
+  background-color: var(--header-bg-color);
+  margin-bottom: 10vh;
 }
 
 nav {
   text-align: left;
+}
+
+nav ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
+nav a {
+  text-decoration: none;
+  color: black;
+  text-transform: uppercase;
+  font-size: 1.4vw;
+  font-weight: 550;
 }
 
 button {
@@ -33,6 +53,11 @@ button {
 	font-size: 2.8vh;
   text-transform: uppercase;
   transition: 0.5s;
+}
+
+.checkout-card--update-qty-btn {
+  padding: 0.5vw 1vw 0.5vw 1vw;
+  margin-top: -5vw;
 }
 
 button:hover {
@@ -52,6 +77,7 @@ button:hover {
 }
 
 .country-flags {
+  display: none;
   text-align:left;
 }
 
@@ -79,15 +105,35 @@ button:hover {
 
 .checkout-card {
   display: flex;
+  align-items: center;
   justify-content: space-between;
   margin: 1.5vw;
   padding: 0 1.5vw 0 1.5vw;
   border: 1px solid silver;
-  height: 25vh;
+  
 }
 
-.checkout-card-img {
+.checkout-cart--title {
+  flex: 5;
+}
+
+.checkout-card--img {
+  flex: 4;
   max-width: 100%;
+  max-height: 25vh;
+}
+
+.checkout-cart--delete{
+  flex: 1;
+  cursor: pointer;
+}
+
+.checkout-cart--price{
+  flex: 5;
+}
+
+.checkout-cart--toggler{
+  flex: 4;
 }
 
 .product-detail--info--img {
@@ -130,15 +176,12 @@ button:hover {
   left: 0;
   right: 0;
   height: 5vw;
-  overflow-x: hidden;
+  overflow: hidden;
 }
 
 .shopping-cart {
-  float: right;
-}
-
-.checkout-title {
-  width: 20%;
+  color: black;
+  text-decoration: none;
 }
 
 .checkout-payment {
